[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites and sheets/Bones/Bones Sheet V3.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/Retro FootStep 03.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=8]
resource_name = "Dash"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 12, 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Falling"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Gliding"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 17, 16 ]
}

[sub_resource type="Animation" id=6]
resource_name = "JumpUp"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Walking"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.4, 28.2353 )

[sub_resource type="CircleShape2D" id=9]
radius = 1.4

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -32 )
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4, -8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 4
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dash = SubResource( 8 )
anims/Falling = SubResource( 7 )
anims/Gliding = SubResource( 12 )
anims/JumpUp = SubResource( 6 )
anims/RESET = SubResource( 10 )
anims/Walking = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 8 )
scale = Vector2( 2.5, 0.85 )
shape = SubResource( 5 )

[node name="PlayerHitBox" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
position = Vector2( -3, 8 )
scale = Vector2( 2.5, 0.85 )
shape = SubResource( 5 )

[node name="AttBox" type="Area2D" parent="."]
position = Vector2( -2, 9 )
collision_layer = 4
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttBox"]
scale = Vector2( 35, 35 )
shape = SubResource( 9 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.03
one_shot = true

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
